feat: adição de operador congele